--- a/configs/a2c/solving_acrobot.yaml
+++ b/configs/a2c/solving_acrobot.yaml
@@ -3,13 +3,13 @@ init_kwargs:
     learning_rate: 0.0007
     optimizer_type: 'RMS_PROP'
     batch_size: 5
-    policy_net_fn: 'rlberry.agents.torch.utils.training.model_factory_from_size_model_config'
+    policy_net_fn: 'rlberry.agents.torch.utils.training.model_factory_from_env'
     policy_net_kwargs:
       type: 'MultiLayerPerceptron'
       layer_sizes: [256]
       reshape: False
       is_policy: True
-    value_net_fn: 'rlberry.agents.torch.utils.training.model_factory_from_size_model_config'
+    value_net_fn: 'rlberry.agents.torch.utils.training.model_factory_from_env'
     value_net_kwargs:
       type: "MultiLayerPerceptron"
       layer_sizes": 
