--- a/configs/a2c/solving_cartpole.yaml
+++ b/configs/a2c/solving_cartpole.yaml
@@ -2,8 +2,9 @@ agent_class: 'rlberry.agents.torch.A2CAgent'
 init_kwargs:
     learning_rate: 0.0007
     optimizer_type: 'RMS_PROP'
-    batch_size: 5
-    horizon: 500
+    batch_size: 200
+    eval_interval: 1000
 n_fit: 1
 fit_kwargs:
-    fit_budget: 1000
+    fit_budget: 1_000_000
+    
