--- a/configs/solving_acrobot.yaml
+++ b/configs/solving_acrobot.yaml
@@ -1,7 +1,7 @@
-description: 'Lunar Lander by rlberry'
+description: 'Acrobot by rlberry'
 seed: 23
-train_env: './configs/envs/lunarlander.yaml'
-eval_env: './configs/envs/lunarlander.yaml'
+train_env: './configs/envs/acrobot.yaml'
+eval_env: './configs/envs/acrobot.yaml'
 agents:
-    - './configs/a2c/a2c_lunarlander.yaml' 
-    - './configs/dqn/dqn_lunarlander.yaml'
+    - './configs/a2c/a2c_acrobot.yaml' 
+    - './configs/dqn/dqn_acrobot.yaml'
