--- a/configs/solving_acrobot.yaml
+++ b/configs/solving_acrobot.yaml
@@ -4,4 +4,4 @@ train_env: './configs/envs/acrobot.yaml'
 eval_env: './configs/envs/acrobot.yaml'
 agents:
     - './configs/a2c/a2c_acrobot.yaml' 
-    - './configs/dqn/dqn_acrobot.yaml'
+    #- './configs/dqn/dqn_acrobot.yaml'
