--- a/rlberry_exps/configs/solving_acrobot.yaml
+++ b/rlberry_exps/configs/solving_acrobot.yaml
@@ -3,5 +3,6 @@ seed: 23
 train_env: './configs/envs/acrobot.yaml'
 eval_env: './configs/envs/acrobot.yaml'
 agents:
-    - './configs/a2c/a2c_acrobot.yaml' 
+    # - './configs/a2c/a2c_acrobot.yaml' 
     #- './configs/dqn/dqn_acrobot.yaml'
+    - './configs/ppo/ppo_acrobot.yaml' 
